--- a/Recorder_APP/app/src/main/res/drawable/buttton_radious.xml
+++ b/Recorder_APP/app/src/main/res/drawable/buttton_radious.xml
@@ -5,7 +5,7 @@
         <!--android:color="@color/colorPrimaryDark"-->
         <!--android:dashWidth="1dp"-->
         <!--android:dashGap="1dp" />-->
-    <solid android:color="@color/colorAccent"  />
+    <solid android:color="@color/colorAccentLight"  />
     <!--<padding-->
         <!--android:left="1dp"-->
         <!--android:right="1dp"-->
