--- a/Recorder_APP/app/src/main/res/layout/activity_login.xml
+++ b/Recorder_APP/app/src/main/res/layout/activity_login.xml
@@ -80,7 +80,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/action_sign_in"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                    android:background="@drawable/positivebutton" />
                 <Button
                     android:id="@+id/register_button"
                     style="?android:textAppearanceSmall"
