--- a/Recorder_APP/app/src/main/res/layout/activity_register.xml
+++ b/Recorder_APP/app/src/main/res/layout/activity_register.xml
@@ -112,7 +112,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/action_register"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:background="@drawable/positivebutton" />
 
         </LinearLayout>
     </ScrollView>
