--- a/Recorder_APP/app/src/main/res/layout/add_user_own_habit.xml
+++ b/Recorder_APP/app/src/main/res/layout/add_user_own_habit.xml
@@ -3,33 +3,36 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:padding="16dp"
     android:layout_height="match_parent">
-    
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:id="@+id/add_user_own_habit_imageView"
-        />
-    
-    <EditText
+
+    <TextView
+        android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="Habit Name:"
+        android:textSize="18sp"
+        android:layout_marginTop="10dp" />
+
+    <EditText
         android:id="@+id/add_user_own_habit_EditText"
-        android:hint="Please Enter Your Habit Name"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_gravity="center_vertical">
         <TextView
-            android:layout_gravity="center"
+            android:layout_gravity="center_vertical"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
-            android:text="Habit Type"
+            android:text="Habit type:"
             android:textSize="18sp" />
         <Spinner
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_weight="0.5"
             android:id="@+id/add_user_own_habit_spinner"
             />
@@ -47,9 +50,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Please choose:"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:layout_margin="0dp"
+            android:layout_marginTop="10dp" />
         <Button
             android:id="@+id/time_picker"
             android:layout_width="match_parent"
@@ -57,7 +60,7 @@
             android:drawableLeft="@drawable/ic_alarm_black_24dp"
             android:text="alert time"
             android:paddingLeft="120dp"
-            android:paddingRight="85dp"
+            android:paddingRight="95dp"
             android:background="@drawable/buttton_radious"
             android:layout_marginTop="10dp" />
         <EditText
@@ -76,7 +79,7 @@
     </LinearLayout>
 
 
-    
+
 
 
 
