--- a/Recorder_APP/app/src/main/res/layout/record_fragment.xml
+++ b/Recorder_APP/app/src/main/res/layout/record_fragment.xml
@@ -12,31 +12,9 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/title"
-            android:padding="8dp"
-            >
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.7"
-
-                android:text="Habit Name"/>
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.3"
-
-                android:text="Score"/>
-        </LinearLayout>
-
         <include layout="@layout/item_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"/>
+            android:layout_height="match_parent" />
     </FrameLayout>
 
     <android.support.design.widget.FloatingActionButton
