--- a/Recorder_APP/app/src/main/res/layout/ranking_list_fragment.xml
+++ b/Recorder_APP/app/src/main/res/layout/ranking_list_fragment.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:orientation="vertical"
-        android:background="@color/DarkGreenButton">
+        android:background="@color/colorPrimary">
 
         <LinearLayout
             android:layout_width="match_parent"
